--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support - EnglishAdventure</title>
+    <title>Privacy Policy - EnglishAdventure</title>
     <style>
         /* Общие стили */
         * {
@@ -24,13 +24,12 @@
         }
 
         .container {
-            max-width: 500px;
+            max-width: 600px;
             width: 90%;
             padding: 20px;
             background: #ffffff;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            text-align: center;
         }
 
         .logo {
@@ -40,14 +39,21 @@
         }
 
         h1 {
-            font-size: 1.8rem;
+            font-size: 2rem;
             margin-bottom: 15px;
+            text-align: center;
             color: #ebb134;
         }
 
-        p {
+        h2 {
+            font-size: 1.5rem;
+            margin: 20px 0 10px;
+            color: #555;
+        }
+
+        p, li {
             font-size: 1rem;
-            margin-bottom: 20px;
+            line-height: 1.6;
             color: #555;
         }
 
@@ -70,16 +76,53 @@
         a:hover {
             color: #eb9f34;
         }
+
+        footer {
+            margin-top: 20px;
+            font-size: 0.9rem;
+            text-align: center;
+            color: #aaa;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <img src="logo.jpg" alt="EnglishAdventure Logo" class="logo">
-        <h1>EnglishAdventure privacy page</h1>
-        <p>Our application does not collect, process, or transmit users' personal data. All features are available locally without the need for an internet connection.</p>
+        <h1>Privacy Policy for Adveng</h1>
+        <p>Thank you for using Adveng! We value your privacy and are committed to being transparent about how your data is handled.</p>
+
+        <h2>1. Data Collection and Usage</h2>
+        <p>Adveng does not collect, store, or transmit user-related data to our servers or third-party services. However, the Yandex Mobile Ads SDK may process certain technical data to deliver relevant ads and improve advertising services. This data includes:</p>
+        <ul>
+            <li>Device Identifiers: e.g., advertising identifier (IDFA) for iOS.</li>
+            <li>Technical Device Data: device model, OS version, network info.</li>
+            <li>App Usage Data: interactions with the app and ads.</li>
+        </ul>
+        <p>Yandex processes this data in compliance with their privacy policy and does not share it with Adveng or other entities.</p>
+
+        <h2>2. Data Sharing</h2>
+        <p>Adveng does not share user data. All data processed by the Yandex SDK is managed independently by Yandex under their privacy policy.</p>
+
+        <h2>3. Security</h2>
+        <p>Yandex Mobile Ads SDK employs industry-standard security measures. Adveng ensures compliance with App Store policies and best practices during SDK integration.</p>
+
+        <h2>4. Your Privacy Choices</h2>
+        <p>As a user, you can control app tracking and ad personalization:</p>
+        <ul>
+            <li>Go to <b>Settings &gt; Privacy &gt; Tracking</b> to manage permissions.</li>
+            <li>Reset your advertising identifier to minimize ad personalization.</li>
+        </ul>
+
+        <h2>5. Changes to This Privacy Policy</h2>
+        <p>We may update this policy due to app changes, legal requirements, or Yandex's practices. Updates will be posted here with a revised effective date.</p>
+
+        <h2>6. Contact Us</h2>
+        <p>If you have questions about this Privacy Policy, please contact us:</p>
         <ul>
             <li>Email: <a href="mailto:art.zibarev1@gmail.com">art.zibarev1@gmail.com</a></li>
         </ul>
+
+        <p>By using Adveng, you agree to this Privacy Policy. Thank you for trusting us!</p>
     </div>
 </body>
 </html>
